--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ h1 {
     <a href="#" class="button">📄 Paper</a>
     <a href="#" class="button">💻 Code</a>
 </div>
+<h1>Intelligent Drone Detection Using YOLOv11</h1>
 
 </div>
 
