--- a/index.html
+++ b/index.html
@@ -1,100 +1,128 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>My Research Project</title>
-
-<style>
-body {
-    font-family: 'Segoe UI', sans-serif;
-    background-color: #f5f5f5;
-    text-align: center;
-    margin: 0;
-    padding: 0;
-}
-
-.container {
-    max-width: 1000px;
-    margin: auto;
-    padding: 60px 20px;
-}
-
-h1 {
-    font-size: 42px;
-    font-weight: 600;
-}
-
-.authors {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
-    margin-top: 40px;
-}
-
-.author {
-    font-size: 18px;
-}
-
-.author span {
-    display: block;
-    font-size: 14px;
-    color: gray;
-}
-
-.buttons {
-    margin-top: 50px;
-}
-
-.button {
-    display: inline-block;
-    padding: 12px 30px;
-    margin: 10px;
-    border-radius: 30px;
-    background: #333;
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
-}
-
-.button:hover {
-    background: #555;
-}
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>MyProject: Title Like EpicSculptor</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
+  <main class="container">
 
-<div class="container">
+    <!-- Title -->
+    <header class="hero">
+      <h1>EpicSculptor: Spatially-Aware Joint Optimization for Text-Driven 3DGS Editing</h1>
 
-<h1>Intelligent Drone Detection Using YOLOv11</h1>
+      <!-- Authors -->
+      <section class="authors">
+        <div class="author">
+          <div class="name">Bo Wei</div>
+          <div class="aff">Zhejiang Gongshang University</div>
+        </div>
+        <div class="author">
+          <div class="name">Yan Tian</div>
+          <div class="aff">Zhejiang Gongshang University</div>
+        </div>
+        <div class="author">
+          <div class="name">Weiping Ding</div>
+          <div class="aff">Nantong University</div>
+        </div>
+        <div class="author">
+          <div class="name">Zhaocheng Xu</div>
+          <div class="aff">Massey University</div>
+        </div>
 
-<div class="authors">
-    <div class="author">
-        Saad Al-Haneef
-        <span>Majmaah University</span>
-    </div>
-    <div class="author">
-        Mohammed Al-Amoudi
-        <span>Majmaah University</span>
-    </div>
-    <div class="author">
-        Khalid Al-Dameh
-        <span>Majmaah University</span>
-    </div>
-    <div class="author">
-        Supervisor: Dr. Ayman
-        <span>College of Applied Sciences</span>
-    </div>
-</div>
+        <div class="author">
+          <div class="name">Mahmoud Hassaballah</div>
+          <div class="aff">Prince Sattam Bin Abdulaziz University</div>
+        </div>
+        <div class="author">
+          <div class="name">Karen Egiazarian</div>
+          <div class="aff">Tampere University</div>
+        </div>
+        <div class="author">
+          <div class="name">Xuran Zhao</div>
+          <div class="aff">Zhejiang Gongshang University</div>
+        </div>
+        <div class="author">
+          <div class="name">Teddy Yang</div>
+          <div class="aff">University of Hong Kong</div>
+        </div>
 
-<div class="buttons">
-    <a href="#" class="button">📄 Paper</a>
-    <a href="#" class="button">💻 Code</a>
-</div>
-<h1>Intelligent Drone Detection Using YOLOv11</h1>
+        <div class="author author-center">
+          <div class="name">Leszek Rutkowski</div>
+          <div class="aff">Polish Academy of Sciences / AGH University of Krakow</div>
+        </div>
+      </section>
 
-</div>
+      <!-- Buttons -->
+      <section class="btns">
+        <a class="btn" href="paper.pdf" target="_blank" rel="noreferrer">📄 Paper</a>
+        <a class="btn" href="https://github.com/USERNAME/REPO" target="_blank" rel="noreferrer">💻 Code</a>
+      </section>
+    </header>
 
+    <!-- Abstract -->
+    <section class="block">
+      <h2>Abstract</h2>
+      <p class="text">
+        اكتب هنا ملخص مشروعك (5–8 أسطر). نفس فكرة الصفحة: تعريف بالمشكلة + الحل + أهم النتائج.
+        تقدر تخليها إنجليزي أو عربي.
+      </p>
+    </section>
+
+    <!-- Method -->
+    <section class="block">
+      <h2>Method</h2>
+      <figure class="figure">
+        <img src="assets/method.png" alt="Method overview diagram">
+        <figcaption>Overview of the proposed method (ضع شرح بسيط للصورة).</figcaption>
+      </figure>
+    </section>
+
+    <!-- Example -->
+    <section class="block">
+      <h2>Example</h2>
+
+      <div class="example-grid">
+        <div class="ex-col">
+          <div class="ex-title">Original</div>
+          <img src="assets/ex1.jpg" alt="Original example 1">
+          <img src="assets/ex2.jpg" alt="Original example 2">
+        </div>
+
+        <div class="ex-col">
+          <div class="ex-title">Baseline-1</div>
+          <img src="assets/ex3.jpg" alt="Baseline example 1">
+          <img src="assets/ex4.jpg" alt="Baseline example 2">
+        </div>
+
+        <div class="ex-col">
+          <div class="ex-title">Baseline-2</div>
+          <img src="assets/ex5.jpg" alt="Baseline2 example 1">
+          <img src="assets/ex6.jpg" alt="Baseline2 example 2">
+        </div>
+
+        <div class="ex-col">
+          <div class="ex-title">Ours</div>
+          <img src="assets/ex7.jpg" alt="Ours example 1">
+          <img src="assets/ex8.jpg" alt="Ours example 2">
+        </div>
+      </div>
+
+      <p class="note">
+        * غير أسماء الأعمدة حسب مشروعك (مثل: YOLOv8 / YOLOv11 / Ours).
+      </p>
+    </section>
+
+    <footer class="footer">
+      <div>© 2026 — Your Project Name</div>
+    </footer>
+
+  </main>
 </body>
 </html>
